# PAITest

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.py  main.py  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: release-drafter.yml
PATest/: config.py  frame.py
paitest/: __init__.py  _types.py  base.py  coord.py  frame.py  frame_params.py  frame_utils.py  group_gen.py  log.py  paitest.py  paitest.pyi  utils.py
paitest/cores/: cores_params.py  cores_utils.py
paitest/frames/: __init__.py  coord.py  coord.pyi  frame.py  frame_params.py  mask.py  params.py
tests/: test_frame.py  test_group_gen.py  test_params.py  test_utils.py
