[tool.poetry]
name = "PAITest"
version = "1.1.0"
description = "Test module for PAICORE 2.0"
authors = ["KafCoppelia <k740677208@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PAICookers/PAITest"
homepage = "https://github.com/PAICookers/PAITest"
documentation = "https://github.com/PAICookers/PAITest#readme"
keywords = ["PAICookers", "PAITest", "PAICORE"]
include = ["./paitest"]

[tool.poetry.dependencies]
python = "^3.6"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
